Finishing the pet funcionalities
